Fix build script