@@ -1,6 +1,5 @@
 #!/bin/sh
-# export MAVEN_OPTS="-Xms512m -Xmx756m -XX:MaxPermSize=256m"
-export JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk1.8.0_31.jdk/Contents/Home
+
 mvn clean verify
 
 cd build/product/target/;
@@ -13,4 +12,3 @@ mv product/eclipse product/calclab-headless;
 cd product;
 zip -r $product calclab-headless > /dev/null;
 mv $product ../$product;
-
